index.css
html, body {
    margin: 0;
    padding: 0;
    position: relative;
    width: 100%;
    height: 100%;
}

body {
    background-color: #82ABA1;
}

.container {
    width: 800px;
    margin: 0 auto;
    background-color: #ffffff;
    border-radius: 30px;
}

/* CSS applying to all sections */

.name {
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: 700;
    font-size: 22px;
}

.location {
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: 400;
    font-size: 20px;
}

.icons {
    flex-direction: row;
}

.icon-btn {
    flex-direction: row;
    width: 50px;
    padding: 30px 10px;
    margin-bottom: 0;
}

.icon-btn:hover, 
.icon-btn:focus {
    opacity: 50%;
}

.likes {
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 22px;
    font-weight: 700; 
    margin-top: -15px;
    margin-left: 15px;
    padding-top: 0;
}

.comment {
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 22px;
    font-weight: 400; 
    margin-top: -15px;
    margin-left: 15px;
    padding-top: 0;
}



/* Header Section */

header {
    display: flex;
    width: 100%;
    /* border: 1px solid black; */
    justify-content: space-between;
    border-bottom: 4px solid #ededed;
}

.main-logo {
    width: 200px;
    margin-left: 40px;
}

.avatar {

    border-radius: 50%;
    width: 75px; 
    padding: 20px;
}

/* Artists Section */

.vanGogh-sec, 
.courbet-sec,
.ducreux-sec {
    display: flex;
    justify-content: start;
    align-items: center;
    
}

.vanGogh-avatar,  
.courbet-avatar,
.ducreux-avatar {
    border-radius: 50%;
    width: 75px;
    padding: 50px 20px;
}

.vanGogh-post, 
.courbet-post,
.ducreux-post {
    display: flex;
    flex-direction: column; 
    margin: 0 auto;
 }
 
 .vanGogh-img, 
 .courbet-img,
 .ducreux-img {
     width: 100%;
 }
 
 

